ui_tests/tests/lowering/abnormally-bodiless.stderr
error[E012]: declaration `blank` has no definition
 --> ${DIRECTORY}/lowering/abnormally-bodiless.lushui:3:1
  |
3 | blank: Declaration
  | ^^^^^^^^^^^^^^^^^^ 
  |
 help: provide a definition with `=`

error[E012]: declaration `Blank` has no definition
 --> ${DIRECTORY}/lowering/abnormally-bodiless.lushui:5:1
  |
5 | data Blank
  | ^^^^^^^^^^ 
  |
 help: provide a definition with `of`

error[E015]: missing mandatory type annotation on declaration `Blank`
 --> ${DIRECTORY}/lowering/abnormally-bodiless.lushui:5:1
  |
5 | data Blank
  | ^^^^^^^^^^ 
  |
 help: provide a type annotation for the declaration with `: TYPE`

error: aborting due to 3 previous errors

